syntax ="proto3";

option go_package="./grpc/proto/article";
package article;

message getArticleRequest{
	int32 id=1;
}

message getArticleResponse{
	string title =1;
	string description =2;
}
service Article{
	rpc getArticle(getArticleRequest) returns (getArticleResponse){}
}